--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/globalStyles.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <title>Webwomen</title>
     <meta
       name="description"
@@ -46,7 +45,7 @@
     </div>
   </main>
   
-    <script src="jobsData.js" ></script>
-    <script src="index.js"></script>
+    <script src="/pages/home/jobsData.js" ></script>
+    <script src="/pages/home/index.js"></script>
 </body>
 </html>
